[package]
name = "disson"
version = "0.1.0"
authors = ["rookie1024 <rookie1286@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
atty = "0.2.14"
csv = "1.1.5"
dirs = "3.0.1"
dispose = "0.2.1"
env_logger = "0.8.3"
bincode = "1.3.1"
iced = "0.2.0"
image = "0.23.13"
lazy_static = "1.4.0"
log = "0.4.14"
nalgebra = { version = "0.25.3", features = ["serde-serialize"] }
notify = "5.0.0-pre.6"
rayon = "1.5.0"
regex = "1.4.3"
ron = "0.6.4"
serde = { version = "1.0.123", features = ["derive"] }
sha2 = "0.9.3"
structopt = "0.3.21"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["macros", "rt", "signal", "sync"] }
zstd = "0.6.0"
